# nexus-dfir

./: .coverage  .gitignore  EVALUATION_REPORT.md  Nexus_FIRST2026_Paper.docx  PAPER.docx  PAPER.md  README.md  pyproject.toml  requirements.txt
demos/: nexus_v3_case01_lockbit.sh  nexus_v3_case02_apt.sh  nexus_v3_case03_mitre.sh  nexus_v3_case04_rdp.sh
demos/casts/: nexus_v3_case01_lockbit.cast  nexus_v3_case02_apt.cast  nexus_v3_case03_mitre.cast  nexus_v3_case04_rdp.cast
nexus/: __init__.py  analyst.py  benchmark.py  case.py  cli.py  detector.py  finding_validator.py  ingestor.py  qa_corpus.py  router.py  schema.py  search.py  stats.py  validator.py  vectorstore.py
nexus/agents/: eil.py  report.py  triage.py
nexus/parsers/: __init__.py  base.py  csv_parser.py  evtx_parser.py  netstat_parser.py  reg_parser.py  systeminfo_parser.py  zeek_parser.py
tests/: test_benchmark_metrics.py  test_benchmark_output.py  test_case.py  test_detector.py  test_finding_validator.py  test_ingestor.py  test_parsers.py  test_router.py  test_validator.py  test_vectorstore.py
